# gwfast

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  NEW_FEATURES.md  README.md  pyproject.toml  requirements.txt  setup.py
GWfish/: Globals.py  __init__.py  fisherGlobals.py  fisherTools.py  fisherUtils.py  network.py  signal.py  utils.py  waveforms.py
WFfiles/: QNMData_a.txt  QNMData_fdamp.txt  QNMData_fring.txt
docs/: README.md  docs_requirements.txt
docs/source/: additional_definitions.rst  citation.rst  conf.py  create_data.rst  detector_networks.rst  fisher_tools.rst  index.rst  installation.rst  psds_readme_link.md  run_script.rst  single_detector.rst  waveforms.rst
gwfast/: __init__.py  fisherGlobals.py  fisherTools.py  gwfastGlobals.py  gwfastUtils.py  network.py  signal.py  waveforms.py
gwfast/.patch/: patch_ndt_complex_0-9-41.patch
gwfast/population/: Globals.py  POPFisher.py  POPmodels.py  POPutils.py  README.md
gwfast/stochastic/: README.md  stochasticTools.py
notebooks/: GWfish_tutorial.ipynb  Stochastic_tutorial.ipynb  gwfast_tutorial.ipynb  new_features_tutorial.ipynb
psds/: PSDs_README.md  README.md
psds/LVC_O1O2O3/: 2017-06-10_DCH_C02_H1_O2_Sensitivity_strain_asd.txt  2017-08-06_DCH_C02_L1_O2_Sensitivity_strain_asd.txt  H1_asd-1262197260.txt  V1_asd-1265246178.txt
psds/LVK_O1O2O3/: Hrec_hoft_V1O2Repro2A_16384Hz.txt  L1_asd-1262141640.txt
psds/ce_curves/: a_plus.txt  advirgo_plus.txt  ce1_10km_cb.txt  ce1_10km_pm.txt  ce1_20km_cb.txt  ce1_20km_pm.txt  ce1_30km_cb.txt  ce1_30km_pm.txt  ce1_40km_cb.txt  ce1_40km_pm.txt  ce2_10km_cb.txt  ce2_10km_pm.txt  ce2_20km_cb.txt  ce2_20km_pm.txt  ce2_30km_cb.txt  ce2_30km_pm.txt  ce2_40km_cb.txt  ce2_40km_pm.txt  kagra_plus.txt  voyager_cb.txt  voyager_pm.txt
psds/ce_strain/: cosmic_explorer.txt  cosmic_explorer_20km_pm.txt
psds/observing_scenarios_paper/: aligo_O3actual_H1.txt  aligo_O3actual_L1.txt  aligo_O4low.txt  avirgo_O3actual.txt  avirgo_O4high_NEW.txt  avirgo_O5low_NEW.txt  kagra_10Mpc.txt  kagra_128Mpc.txt  kagra_25Mpc.txt  kagra_3Mpc.txt  kagra_80Mpc.txt
psds/pycbc_public/: aplus_sqzonly.txt  ce2.txt  er8.txt  et_d.txt  kagra.txt  kagra_sqz.txt  o1.txt  o2.txt  o3_l1.txt
run/: calculate_forecasts_from_catalog.py  config_file.ini  correlation_from_data.py
(+34 files in other folders)
